# sel4-example

./: CMakeLists.txt  README.md  c.c  c.h  cptr.c  cptr.h  debug.c  debug.h  easy-settings.cmake  fail.c  fail.h  master.xml  roottask.c  rt.c  run_manually.sh  settings.cmake  ut.c  ut.h
